# Srbt

./: .env.example  README.md  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  srbt_dev.db
backend/app/: config.py  database.py
backend/app/models/: __init__.py  company.py  invoice.py  invoice_item.py  material.py  order.py  order_item.py  user.py  vehicle.py
backend/app/routers/: auth.py  companies.py  invoices.py  materials.py  orders.py  reports.py  vehicles.py
backend/app/services/: auth.py
frontend/: Dockerfile  SRBT Order App - Standalone.html  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/catalog/: page.tsx
frontend/app/(shell)/: layout.tsx
frontend/components/: auth-guard.tsx  install-prompt.tsx  service-worker-register.tsx
frontend/components/shared/: AppHeader.tsx  BottomNav.tsx  Sidebar.tsx  UserBadge.tsx
frontend/context/: auth-context.tsx
frontend/lib/: api.ts
frontend/public/: manifest.json  sw.js
frontend/types/: index.ts
srbt-static-site/: package-lock.json  package.json
srbt-static-site/src/components/: About.astro  ContactForm.astro  Footer.astro  Gallery.astro  Header.astro  Hero.astro  Services.astro
srbt-static-site/src/layouts/: BaseLayout.astro
srbt-static-site/src/pages/: about.astro  contact.astro  gallery.astro  index.astro  services.astro
(+27 files in other folders)
